--- a/src/CombatAnalysis.App/Views/ResourceRecoveryDetailsView.xaml
+++ b/src/CombatAnalysis.App/Views/ResourceRecoveryDetailsView.xaml
@@ -40,7 +40,7 @@
         </ContentControl>
 
         <Grid Grid.Column="2" Grid.ColumnSpan="2" Margin="20" VerticalAlignment="Bottom" HorizontalAlignment="Center">
-            <TextBlock HorizontalAlignment="Left" VerticalAlignment="Top"
+            <TextBlock HorizontalAlignment="Left" VerticalAlignment="Top" Foreground="White"
                    Text="{Binding SelectedPlayer}" FontSize="18"
                    FontWeight="Bold" FontFamily="Comic Sans MS" FontStyle="Italic" TextAlignment="Center" />
         </Grid>
@@ -49,38 +49,41 @@
                     HorizontalAlignment="Center" Panel.ZIndex="1">
             <StackPanel Orientation="Horizontal">
                 <TextBlock Text="{loc:Loc TypeOf}" FontSize="15" TextAlignment="Center" Padding="10" FontWeight="SemiBold"
-                           VerticalAlignment="Center" Margin="0" Width="100" Foreground="Gray"/>
+                           VerticalAlignment="Center" Margin="0" Width="100" Foreground="White"/>
                 <ComboBox Style="{DynamicResource ComboBoxStyle1}" VerticalAlignment="Center" Name="detailsType"
                           Width="135" SelectedIndex="{Binding DetailsTypeSelectedIndex}">
                     <ComboBoxItem Content="{loc:Loc Common}" IsSelected="True"/>
                     <ComboBoxItem Content="{loc:Loc MoreDetails}" />
                 </ComboBox>
             </StackPanel>
+            
             <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Text="{loc:Loc Title}"
-                       Width="350" TextAlignment="Center" Style="{StaticResource titleText}"
+                       Width="350" TextAlignment="Center" Style="{StaticResource titleText}" Foreground="White"
                        Margin="25 0"/>
+            
             <StackPanel Orientation="Horizontal" Visibility="{Binding IsShowFilters, Converter={StaticResource BoolToVisibility}, ConverterParameter=false}">
                 <TextBlock Text="{loc:Loc Source}" FontSize="15" TextAlignment="Center" Padding="10" FontWeight="SemiBold"
-                           Margin="0" Width="100" Foreground="Gray"/>
+                           Margin="0" Width="100" Foreground="White"/>
                 <ComboBox Name="sortingProperty" Style="{DynamicResource ComboBoxStyle1}" ItemsSource="{Binding Sources}"
                           VerticalAlignment="Center" Width="210" SelectedItem="{Binding SelectedSource}" SelectedIndex="0"/>
             </StackPanel>
         </StackPanel>
 
-        <DataGrid Margin="20 30 20 45" Grid.Row="2" Grid.Column="2" Height="450" GridLinesVisibility="None" 
-                      CanUserAddRows="False" CanUserDeleteRows="False" AutoGenerateColumns="False"
-                 VerticalAlignment="Top" Background="Transparent" ItemsSource="{Binding GeneralInformations}"
-                 Visibility="{Binding ElementName=detailsType, Path=SelectedIndex, Converter={StaticResource IntToVisibility}, ConverterParameter=true:0}">
+        <DataGrid CellStyle="{DynamicResource DataGridCellStyle1}" ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle1}" 
+                  RowStyle="{DynamicResource DataGridRowStyle1}" Style="{DynamicResource DataGridStyle1}"
+                  Margin="20 30 20 45" Grid.Row="2" Grid.Column="2" Height="450"
+                  VerticalAlignment="Top" ItemsSource="{Binding GeneralInformations}"
+                  Visibility="{Binding ElementName=detailsType, Path=SelectedIndex, Converter={StaticResource IntToVisibility}, ConverterParameter=true:0}">
             <DataGrid.Columns>
                 <DataGridTemplateColumn SortMemberPath="SpellOrItem" IsReadOnly="True" MinWidth="175">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <TextBlock Text="{Binding Path=SpellOrItem}" TextAlignment="Center" Margin="10" FontSize="14" FontFamily="Comic Sans MS"/>
+                            <TextBlock Text="{Binding Path=SpellOrItem}" TextAlignment="Center" Margin="10" FontSize="12" />
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                     <DataGridTemplateColumn.HeaderTemplate>
                         <DataTemplate>
-                            <TextBlock Text="{loc:Loc Source}" Margin="5" TextAlignment="Center" FontSize="14" FontStyle="Oblique"  FontWeight="Bold"/>
+                            <TextBlock Text="{loc:Loc Source}" Margin="5" TextAlignment="Center" FontSize="12" Foreground="White"/>
                         </DataTemplate>
                     </DataGridTemplateColumn.HeaderTemplate>
                 </DataGridTemplateColumn>
@@ -88,12 +91,12 @@
                 <DataGridTemplateColumn SortMemberPath="Value" IsReadOnly="True" MinWidth="175">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <TextBlock Text="{Binding Path=Value}" TextAlignment="Center" Margin="10" FontSize="14" FontFamily="Comic Sans MS"/>
+                            <TextBlock Text="{Binding Path=Value}" TextAlignment="Center" Margin="10" FontSize="12" />
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                     <DataGridTemplateColumn.HeaderTemplate>
                         <DataTemplate>
-                            <TextBlock Text="{loc:Loc Resources}" Margin="5" TextAlignment="Center" FontSize="14" FontStyle="Oblique"  FontWeight="Bold"/>
+                            <TextBlock Text="{loc:Loc Resources}" Margin="5" TextAlignment="Center" FontSize="12" Foreground="White"/>
                         </DataTemplate>
                     </DataGridTemplateColumn.HeaderTemplate>
                 </DataGridTemplateColumn>
@@ -101,12 +104,12 @@
                 <DataGridTemplateColumn SortMemberPath="CastNumber" IsReadOnly="True" MinWidth="100">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <TextBlock Text="{Binding Path=CastNumber}" TextAlignment="Center" Margin="10" FontSize="14" FontFamily="Comic Sans MS"/>
+                            <TextBlock Text="{Binding Path=CastNumber}" TextAlignment="Center" Margin="10" FontSize="12" />
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                     <DataGridTemplateColumn.HeaderTemplate>
                         <DataTemplate>
-                            <TextBlock Text="{loc:Loc CountOfSkills}" Margin="5" TextAlignment="Center" FontSize="14" FontStyle="Oblique"  FontWeight="Bold"/>
+                            <TextBlock Text="{loc:Loc CountOfSkills}" Margin="5" TextAlignment="Center" FontSize="12" Foreground="White"/>
                         </DataTemplate>
                     </DataGridTemplateColumn.HeaderTemplate>
                 </DataGridTemplateColumn>
@@ -114,12 +117,12 @@
                 <DataGridTemplateColumn SortMemberPath="MinValue" IsReadOnly="True" MinWidth="150">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <TextBlock Text="{Binding Path=MinValue}" TextAlignment="Center" Margin="10" FontSize="14" FontFamily="Comic Sans MS"/>
+                            <TextBlock Text="{Binding Path=MinValue}" TextAlignment="Center" Margin="10" FontSize="12" />
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                     <DataGridTemplateColumn.HeaderTemplate>
                         <DataTemplate>
-                            <TextBlock Text="{loc:Loc MinValue}" Margin="5" TextAlignment="Center" FontSize="14" FontStyle="Oblique"  FontWeight="Bold"/>
+                            <TextBlock Text="{loc:Loc MinValue}" Margin="5" TextAlignment="Center" FontSize="12" Foreground="White"/>
                         </DataTemplate>
                     </DataGridTemplateColumn.HeaderTemplate>
                 </DataGridTemplateColumn>
@@ -127,12 +130,12 @@
                 <DataGridTemplateColumn SortMemberPath="MaxValue" IsReadOnly="True" MinWidth="150">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <TextBlock Text="{Binding Path=MaxValue}" TextAlignment="Center" Margin="10" FontSize="14" FontFamily="Comic Sans MS"/>
+                            <TextBlock Text="{Binding Path=MaxValue}" TextAlignment="Center" Margin="10" FontSize="12" />
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                     <DataGridTemplateColumn.HeaderTemplate>
                         <DataTemplate>
-                            <TextBlock Text="{loc:Loc MaxValue}" Margin="5" TextAlignment="Center" FontSize="14" FontStyle="Oblique"  FontWeight="Bold"/>
+                            <TextBlock Text="{loc:Loc MaxValue}" Margin="5" TextAlignment="Center" FontSize="12" Foreground="White"/>
                         </DataTemplate>
                     </DataGridTemplateColumn.HeaderTemplate>
                 </DataGridTemplateColumn>
@@ -140,12 +143,12 @@
                 <DataGridTemplateColumn SortMemberPath="AverageValue" IsReadOnly="True" MinWidth="175">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <TextBlock Text="{Binding Path=AverageValue, StringFormat=00.00}" TextAlignment="Center" Margin="10" FontSize="14" FontFamily="Comic Sans MS"/>
+                            <TextBlock Text="{Binding Path=AverageValue, StringFormat=00.00}" TextAlignment="Center" Margin="10" FontSize="12" />
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                     <DataGridTemplateColumn.HeaderTemplate>
                         <DataTemplate>
-                            <TextBlock Text="{loc:Loc AverageValue}" Margin="5" TextAlignment="Center" FontSize="14" FontStyle="Oblique"  FontWeight="Bold"/>
+                            <TextBlock Text="{loc:Loc AverageValue}" Margin="5" TextAlignment="Center" FontSize="12" Foreground="White"/>
                         </DataTemplate>
                     </DataGridTemplateColumn.HeaderTemplate>
                 </DataGridTemplateColumn>
@@ -153,12 +156,12 @@
                 <DataGridTemplateColumn SortMemberPath="ResourcePerSecond" IsReadOnly="True" MinWidth="150">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <TextBlock Text="{Binding Path=ResourcePerSecond, StringFormat=00.00}" TextAlignment="Center" Margin="10" FontSize="14" FontFamily="Comic Sans MS"/>
+                            <TextBlock Text="{Binding Path=ResourcePerSecond, StringFormat=00.00}" TextAlignment="Center" Margin="10" FontSize="12" />
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                     <DataGridTemplateColumn.HeaderTemplate>
                         <DataTemplate>
-                            <TextBlock Text="{loc:Loc ResourcesPerSec}" Margin="5" TextAlignment="Center" FontSize="14" FontStyle="Oblique"  FontWeight="Bold"/>
+                            <TextBlock Text="{loc:Loc ResourcesPerSec}" Margin="5" TextAlignment="Center" FontSize="12" Foreground="White"/>
                         </DataTemplate>
                     </DataGridTemplateColumn.HeaderTemplate>
                 </DataGridTemplateColumn>
@@ -167,25 +170,25 @@
 
         <StackPanel Grid.Row="2" Grid.Column="3" Grid.ColumnSpan="2"
                     Visibility="{Binding ElementName=detailsType, Path=SelectedIndex, Converter={StaticResource IntToVisibility}, ConverterParameter=true:1}">
-            <StackPanel Orientation="Horizontal">
-                <CheckBox Margin="25 5" VerticalContentAlignment="Center" Content="{loc:Loc ShowFilters}" IsChecked="{Binding IsShowFilters}"
-                  FontSize="16" VerticalAlignment="Center" FontWeight="SemiBold" />
+            <StackPanel Grid.Column="2" Grid.Row="3" HorizontalAlignment="Left">
+                <CheckBox Style="{DynamicResource CheckBoxStyle1}" VerticalContentAlignment="Center" 
+                    Content="{loc:Loc ShowFilters}" Width="200" Margin="40 0" IsChecked="{Binding IsShowFilters}" />
             </StackPanel>
-            
-            <DataGrid Margin="20 10" Height="450" GridLinesVisibility="None" 
-                      CanUserAddRows="False" CanUserDeleteRows="False" AutoGenerateColumns="False"
-                 VerticalAlignment="Top" Background="Transparent" ItemsSource="{Binding DetailsInformations}" 
-                 Visibility="{Binding ElementName=detailsType, Path=SelectedIndex, Converter={StaticResource IntToVisibility}, ConverterParameter=true:1}">
+
+            <DataGrid CellStyle="{DynamicResource DataGridCellStyle1}" ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle1}" 
+                      RowStyle="{DynamicResource DataGridRowStyle1}" Style="{DynamicResource DataGridStyle1}"
+                      Margin="20 10" Height="450" VerticalAlignment="Top" ItemsSource="{Binding DetailsInformations}" 
+                      Visibility="{Binding ElementName=detailsType, Path=SelectedIndex, Converter={StaticResource IntToVisibility}, ConverterParameter=true:1}">
                 <DataGrid.Columns>
                     <DataGridTemplateColumn SortMemberPath="Time" IsReadOnly="True" MinWidth="150">
                         <DataGridTemplateColumn.CellTemplate>
                             <DataTemplate>
-                                <TextBlock Text="{Binding Path=Time, StringFormat=hh\\:mm\\:ss}" TextAlignment="Center" Margin="10" FontSize="14" FontFamily="Comic Sans MS"/>
+                                <TextBlock Text="{Binding Path=Time, StringFormat=hh\\:mm\\:ss}" TextAlignment="Center" Margin="10" FontSize="12" />
                             </DataTemplate>
                         </DataGridTemplateColumn.CellTemplate>
                         <DataGridTemplateColumn.HeaderTemplate>
                             <DataTemplate>
-                                <TextBlock Text="{loc:Loc Time}" Margin="5" TextAlignment="Center" FontSize="14" FontStyle="Oblique"  FontWeight="Bold"/>
+                                <TextBlock Text="{loc:Loc Time}" Margin="5" TextAlignment="Center" FontSize="12" Foreground="White"/>
                             </DataTemplate>
                         </DataGridTemplateColumn.HeaderTemplate>
                     </DataGridTemplateColumn>
@@ -193,12 +196,12 @@
                     <DataGridTemplateColumn SortMemberPath="Value" IsReadOnly="True" MinWidth="200">
                         <DataGridTemplateColumn.CellTemplate>
                             <DataTemplate>
-                                <TextBlock Text="{Binding Path=Value}" Margin="10" FontSize="14" TextAlignment="Center" FontFamily="Comic Sans MS"/>
+                                <TextBlock Text="{Binding Path=Value}" Margin="10" FontSize="12" TextAlignment="Center" />
                             </DataTemplate>
                         </DataGridTemplateColumn.CellTemplate>
                         <DataGridTemplateColumn.HeaderTemplate>
                             <DataTemplate>
-                                <TextBlock Text="{loc:Loc Resources}" Margin="5" TextAlignment="Center" FontSize="14" FontStyle="Oblique"  FontWeight="Bold"/>
+                                <TextBlock Text="{loc:Loc Resources}" Margin="5" TextAlignment="Center" FontSize="12" Foreground="White"/>
                             </DataTemplate>
                         </DataGridTemplateColumn.HeaderTemplate>
                     </DataGridTemplateColumn>
@@ -206,12 +209,12 @@
                     <DataGridTemplateColumn SortMemberPath="SpellOrItem" IsReadOnly="True" MinWidth="200">
                         <DataGridTemplateColumn.CellTemplate>
                             <DataTemplate>
-                                <TextBlock Text="{Binding Path=SpellOrItem}" Margin="10" FontSize="14" FontFamily="Comic Sans MS"/>
+                                <TextBlock Text="{Binding Path=SpellOrItem}" Margin="10" FontSize="12" />
                             </DataTemplate>
                         </DataGridTemplateColumn.CellTemplate>
                         <DataGridTemplateColumn.HeaderTemplate>
                             <DataTemplate>
-                                <TextBlock Text="{loc:Loc Source}" Margin="5" TextAlignment="Center" FontSize="14" FontStyle="Oblique"  FontWeight="Bold"/>
+                                <TextBlock Text="{loc:Loc Source}" Margin="5" TextAlignment="Center" FontSize="12" Foreground="White"/>
                             </DataTemplate>
                         </DataGridTemplateColumn.HeaderTemplate>
                     </DataGridTemplateColumn>
@@ -219,11 +222,11 @@
             </DataGrid>
         </StackPanel>
 
-        <StackPanel Grid.Column="2" Grid.Row="2" VerticalAlignment="Bottom" HorizontalAlignment="Left" Margin="20 10"
+        <StackPanel Grid.Column="2" Grid.Row="2" VerticalAlignment="Bottom" HorizontalAlignment="Left" Margin="-30 30"
                     Orientation="Horizontal">
-            <TextBlock Margin="50 0" HorizontalAlignment="Center" VerticalAlignment="Center"
+            <TextBlock Margin="50 0" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="White"
                    Text="{loc:Loc Total}" FontSize="16" TextAlignment="Center"/>
-            <TextBlock Margin="50 0" HorizontalAlignment="Center" VerticalAlignment="Center"
+            <TextBlock Margin="50 0" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="White"
                    Text="{Binding TotalValue}" FontSize="18" TextAlignment="Center" FontWeight="Bold"/>
         </StackPanel>
     </Grid>
